Initial state set

--- a/app/src/main/res/layout/activity_higher_lower.xml
+++ b/app/src/main/res/layout/activity_higher_lower.xml
@@ -30,6 +30,7 @@
         android:id="@+id/IVThrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:text="@string/Throw_Label"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
